Renamed Start Time column; added the correct format for the Start time & Stop time columns of the Smartactivity Table; added the safeText handling for the table title; added scrollbar settings for  all the time visibility

--- a/webapp/src/main/webapp/skin/smartactivity-admin.css
+++ b/webapp/src/main/webapp/skin/smartactivity-admin.css
@@ -1,3 +1,7 @@
+body {
+    overflow-y: scroll;
+}
+
 #stream-selector-app {
     padding: 10px;
 }
@@ -29,3 +33,5 @@
 #hidden-space-selector-data {
     display: none;
 }
+
+
